--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RetrievalToolbox = "46b81e12-0ded-426f-b207-2eae42eca022"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
