--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DistributedData = "f6a0035f-c5ac-4ad0-b410-ad102ced35df"
 GeoTIFF = "c470187e-1474-4b46-a068-a417f109db17"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinRegOutliers = "6d4de0fb-32d9-4c65-aac1-cc9ed8b94b1a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
